Add questionController